--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
-    "particles.js": "2.0.0",
+    "particles.js": "github:theboringindustries/particles.js",
     "svelte": "^3.38.1"
   },
   "devDependencies": {
-    "parcel-bundler": "1.12.5",
-    "parcel-plugin-svelte": "^4.0.7",
-    "typescript": "^4.2.4"
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.9",
+    "typescript": "^4.2.4",
+    "vite": "^2.2.4"
   }
 }
