--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "particles.js": "github:theboringindustries/particles.js",
-    "svelte": "^3.38.1"
+    "svelte": "^3.38.1",
+    "youtube-player": "^5.5.2"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.9",
