--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.9",
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.14",
     "vite": "^2.2.4"
   }
 }
