--- a/package.json
+++ b/package.json
@@ -6,20 +6,28 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "check": "svelte-check"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@theboringindustries/particles.js": "^1.1.0",
+    "bytenode": "^1.2.3",
     "svelte": "^3.38.1",
     "youtube-player": "^5.5.2"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.9",
+    "@tsconfig/svelte": "^1.0.10",
+    "@types/css-font-loading-module": "0.0.4",
+    "@types/youtube-player": "^5.5.3",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.14",
+    "svelte-check": "^1.5.2",
+    "svelte-preprocess": "^4.7.3",
+    "typescript": "^4.2.4",
     "vite": "^2.2.4"
   }
 }
