--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@theboringindustries/particles.js": "^1.3.3",
     "bytenode": "^1.2.3",
+    "esbuild": "^0.12.1",
     "svelte": "^3.38.1",
     "youtube-player": "^5.5.2"
   },
@@ -28,6 +29,6 @@
     "svelte-check": "^1.5.2",
     "svelte-preprocess": "^4.7.3",
     "typescript": "^4.2.4",
-    "vite": "^2.2.4"
+    "vite": "^2.3.3"
   }
 }
