--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "svelte-check": "^1.5.2",
     "svelte-preprocess": "^4.7.3",
     "typescript": "^4.2.4",
-    "vite": "^2.3.3"
+    "vite": "^2.3.3",
+    "vite-plugin-svelte-svg": "^1.0.0"
   }
 }
