--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@theboringindustries/particles.js": "^1.3.3",
     "bytenode": "^1.2.3",
     "esbuild": "^0.12.1",
+    "prettier": "^2.3.0",
     "svelte": "^3.38.1",
     "youtube-player": "^5.5.2"
   },
@@ -26,6 +27,7 @@
     "@types/youtube-player": "^5.5.3",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.14",
+    "prettier-plugin-svelte": "^2.3.0",
     "svelte-check": "^1.5.2",
     "svelte-preprocess": "^4.7.3",
     "typescript": "^4.2.4",
