--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.14",
     "prettier-plugin-svelte": "^2.3.0",
+    "rollup-plugin-visualizer": "^5.5.0",
     "svelte-check": "^1.5.2",
     "svelte-preprocess": "^4.7.3",
     "typescript": "^4.2.4",
